fix gap under drawer on mobile

--- a/src/header/css/header-menus.pcss
+++ b/src/header/css/header-menus.pcss
@@ -591,8 +591,8 @@
 		transition: transform var(--smooth-speed) ease-in-out;
 		z-index: 1;
 		inset-block-start: 100%;
-		size: var(--header-width-m) calc(100vh - 56px);
-		size: var(--header-width-m) calc(var(--esri-vh) - 56px);
+		size: var(--header-width-m) calc(100vh - 50px);
+		size: var(--header-width-m) calc(var(--esri-vh) - 50px);
 
 		&[aria-hidden="true"] {
 			transition: transform var(--smooth-speed) ease-in-out, visibility 0s var(--smooth-speed);
